[fix] Prevent alerter to be full height on mobile

--- a/stylus/ui-components/alerts.styl
+++ b/stylus/ui-components/alerts.styl
@@ -13,7 +13,7 @@ $alerts
     .coz-alert
         position          fixed
         z-index           $alert-index-mobile
-        top               em(16px)
+        top               auto
         right             0
         bottom            em(50px)
         left              0
